# catalyst

./: .env.example  .gitignore  Cargo.toml  Catalyst.toml  README.md  Rocket.toml  Rocket.toml.dev  Rocket.toml.prod  build.rs
src/: bootstrap.rs  lib.rs  main.rs  meltdown.rs
src/assets/js/: app.js
src/assets/locale/: en.json
src/assets/sass/: dark.scss  light.scss  main.scss  midnight.scss  sepia.scss
src/assets/sass/components/: .gitkeep  _color-variables.scss  _contrast.scss  _custom.scss  _dropdown.scss  _earthly.scss  _forest.scss  _global.scss  _iconav.scss  _light.scss  _midnight.scss  _modal.scss  _navbar.scss  _normalize.scss  _pastel.scss  _retro.scss  _sepia.scss  _sidenav.scss  _solarized.scss  _toast.scss  _typography.scss  _urban.scss  _variables.scss  _warm.scss  _winter.scss
src/assets/sass/components/forms/: .gitkeep
src/database/: db.rs  mod.rs  schema.rs  tenant.rs
src/database/migrations/00000000000000_diesel_initial_setup/: up.sql
src/database/migrations/00000000000001_cronjob_setup/: down.sql  up.sql
src/database/migrations/2024-01-01-000010_create_users/: up.sql
src/database/migrations/2024-01-02-000001_create_api_keys/: up.sql
src/database/migrations/2024-01-02-000002_create_api_key_logs/: down.sql  up.sql
src/database/migrations/2024-01-02-000003_create_posts/: up.sql
src/database/seeds/: 001_add_users.sql  002_add_admin.sql  005_add_api_keys.sql  007_add_posts.sql  010_add_api_key_logs.sql
src/middleware/: api_logger.rs  app_context.rs  cache.rs  catchers.rs  compress.rs  enforcer.rs  guards.rs  htmx.rs  jwt.rs  mod.rs  tenant.rs  tenant_admin_guard.rs  tenant_user_guard.rs
src/models/: mod.rs
src/models/auth/: api.rs  users.rs
src/routes/: admin.rs  home.rs  mod.rs  route_group.rs  user.rs
src/routes/api/: admin_partials.rs  mod.rs  user_partials.rs  v1.rs
src/routes/private/: admin.rs  mod.rs  user.rs
src/routes/public/: auth.rs  home.rs  mod.rs
src/services/: mod.rs
src/services/builders/: list.rs  mod.rs  select.rs  table.rs
src/services/context/: api_key_context.rs  api_logs_context.rs  mod.rs
src/services/custom/: hooks.rs
src/services/default/: cronjobs.rs  jwt_service.rs  logger.rs  mod.rs  storage.rs  token_registry.rs
src/services/sparks/: makeuse.rs  mod.rs  mod.rs.backup  registry.rs  registry.rs.backup
src/structs/auth/: api.rs  mod.rs  users.rs
src/vessel/: diesel.toml  guards.rs  mod.rs
src/vessel/database/: db.rs  mod.rs  provisioning.rs  schema.rs
src/vessel/database/migrations/2024-05-13-000001_create_tenants/: down.sql  up.sql
src/vessel/models/: mod.rs  vessel.rs
src/vessel/routes/: auth.rs  dashboard.rs
src/vessel/structs/: vessel.rs
storage/blast/: blast_log.sh  dashboard.kdl  monitor_log.sh  refresh_server_info.sh
templates/: index.html.tera
templates/admin/: index.html.tera
templates/auth/: login.html.tera  register.html.tera
templates/partials/: footer.tera  header.tera  navbar.tera
templates/user/: index.html.tera
templates/vessel/: dashboard.html.tera  login.html.tera  register.html.tera
