[package]
name = "projecta"
version = "0.1.0"
edition = "2021"

# Exclude build artifacts and temporary files when packaging
exclude = [
    "target/",
    "**/*.rs.bk",
    "Cargo.lock",
    ".git/",
    ".gitignore",
    "storage/logs/*.log"
]

[dependencies]
bcrypt = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
csv = "1.3.1"
diesel = { version = "2.2.7", features = ["postgres", "64-column-tables", "chrono", "serde_json"] }
dotenv = "0.15.0"
flate2 = "1.0.35"
heck = "0.5.0"
image = {version = "0.25.2", features = ["jpeg"] }
jsonwebtoken = "9.3.1"
mime_guess = "2.0.5"
reqwest = {version = "0.12.12", features = ["json", "multipart"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket-multipart-form-data = "0.10.7"
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_ws = "0.1.1"
serde_json = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
once_cell = "1.20.3"
rocket_csrf_token = { path = "/home/tragdate/codumeu/rocket_csrf_token" }

[profile.dev]
codegen-units = 12
opt-level = 0
lto = false
debug = true
