[package]
name = "catalyst"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
diesel-async = { version = "0.5.2", features = ["postgres", "r2d2", "tokio", "deadpool"] }
diesel = { version = "2.2.7", features = ["postgres", "64-column-tables", "chrono", "serde_json", "r2d2"] }
dotenv = "0.15.0"
flate2 = "1.0.35"
jsonwebtoken = "9.3.1"
once_cell = "1.20.3"
rocket_csrf_token = { git = "https://github.com/wiseaidev/rocket_csrf_token.git", branch = "dependabot/cargo/rocket-eq-0.5.1" }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
rocket = { version = "0.5.1", features = ["json", "tls"] }
serde_json = "1.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
notify = "5.0.0"
rand = "0.8.5"
rocket_ws = "0.1.1"

[profile.dev]
codegen-units = 12
opt-level = 0
lto = false
debug = true

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
debug = false
